--- a/app/index.html
+++ b/app/index.html
@@ -76,9 +76,11 @@
       </h2>
       <div class="row row--gutters-large">
         <div class="row__medium-6">
-          <img src="assets/images/icons/rain.svg">
-          <h3>We&rsquo;ll Watch the Weather</h3>
-          <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
+          <div class="feature-item">
+            <img src="assets/images/icons/rain.svg">
+            <h3>We&rsquo;ll Watch the Weather</h3>
+            <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
+          </div>
     
           <img src="assets/images/icons/globe.svg">
           <h3>Global Guides</h3>
