--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <img src="assets/images/icons/clear-view-escapes.svg">
       </div>
 
+      <div class="site-header__menu-icon"></div>
+
       <div class="site-header__menu-content">
         <nav class="primary-nav">
           <ul>
