--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="assets/images/icons/clear-view-escapes.svg">
       </div>
 
-      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-icon">
+        <div class="site-header__menu-icon__middle"></div>
+      </div>
 
       <div class="site-header__menu-content">
         <nav class="primary-nav">
@@ -35,9 +37,9 @@
 
   <div class="large-hero">
     <picture>
-      <source srcset="assets/images/hero--large-i.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w" media="(min-width: 1380px)">
-      <source srcset="assets/images/hero--medium-i.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width: 990px)">
-      <source srcset="assets/images/hero--small-i.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w, " media="(min-width: 640px)">
+      <source srcset="assets/images/hero--large.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w" media="(min-width: 1380px)">
+      <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width: 990px)">
+      <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w, " media="(min-width: 640px)">
       <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="Coastal view of ocean and mountains" class="large-hero__image">
     </picture>
 
