--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <title>Zheng Lai</title>
+  <meta name="keywords" content="web developer, front end, frontend, fullstack, react, javascript">
+  <meta name="description" content="A web developer">
 
   <link rel="stylesheet" href="temp/styles/styles.css">
 </head>
 
 <body>
-  <header class="site-header">
+  <header id="particles-js" class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
         <img src="assets/images/icons/clear-view-escapes.svg">
@@ -187,6 +187,6 @@
     </div>
   </footer>
 
-  <script src="/temp/scripts/App.js"></script>
+  <script src="temp/scripts/App.js"></script>
 </body>
 </html>
