--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <img srcset="assets/images/hero--smaller.jpg 640w" alt="Coastal view of ocean and mountains">
     </picture>
 
-    <header class="large-hero__text-content">
+    <header id="particles-js-overlay" class="large-hero__text-content">
       <div class="wrapper">
         <h2 class="large-hero__title">Zheng Lai</h1>
-          <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-          <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
+          <p class="large-hero__description">A web developer with a passion for writing modular code.</p>
+          <!-- <p><a href="#our-beginning" class="btn btn--orange btn--large">My Work</a></p> -->
       </div>
     </header>
   </section>
