--- a/app/index.html
+++ b/app/index.html
@@ -13,30 +13,27 @@
 
 <body>
   <header class="site-header">
-    <div class="wrapper">
-      <h1 class="site-header__heading">
-        Zheng Lai
-      </h1>
+    <h1 class="site-header__heading">
+      Zheng Lai
+    </h1>
 
-      <div class="site-header__menu-icon">
-        <div class="site-header__menu-icon__middle"></div>
-      </div>
-
-      <div class="site-header__menu-content">
-        <nav class="primary-nav">
-          <ul>
-            <li><a href="#our-beginning">Our Beginning</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-          </ul>
-        </nav>
-        <a href="#" class="btn">Get in Touch</a>
-      </div>
-
+    <div class="site-header__menu-icon">
+      <div class="site-header__menu-icon__middle"></div>
     </div>
+
+    <div class="site-header__menu-content">
+      <nav class="primary-nav">
+        <ul>
+          <li><a href="#our-beginning">Home</a></li>
+          <li><a href="#features">My Work</a></li>
+          <li><a href="#testimonials">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
   </header>
 
-  <section id="particles-js" class="large-hero">
+  <section id="banner" class="large-hero large-hero--is-preload">
     <picture class="large-hero__image">
       <source srcset="assets/images/mountains-hero--medium.jpg" media="(min-width: 1380px)">
       <source srcset="assets/images/hero--medium.jpg 1380w" media="(min-width: 990px)">
@@ -44,16 +41,16 @@
       <img srcset="assets/images/hero--smaller.jpg 640w" alt="Coastal view of ocean and mountains">
     </picture>
 
-    <header id="particles-js-overlay" class="large-hero__text-content">
-      <div class="wrapper">
+    <header class="large-hero__text-content">
+      <div id="banner-overlay" class="wrapper">
         <h2 class="large-hero__title">Zheng Lai</h2>
         <p class="large-hero__description">A web developer with a passion for writing modular code.</p>
-        <!-- <p><a href="#our-beginning" class="btn btn--orange btn--large">My Work</a></p> -->
       </div>
+      <a id="banner-overlay-button" href="#my-work" class="button">Learn More</a>
     </header>
   </section>
 
-  <div id="our-beginning" class="page-section">
+  <div id="my-work" class="page-section">
     <div class="wrapper">
 
       <h2 class="headline headline--centred headline--light headline--b-margin-small">The first trip we planned
