--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <header class="site-header">
-    <h1 class="site-header__heading">
+    <div class="site-header__logo">
       Zheng Lai
-    </h1>
+    </div>
 
     <div class="site-header__menu-icon">
       <div class="site-header__menu-icon__middle"></div>
@@ -24,7 +24,7 @@
     <div class="site-header__menu-content">
       <nav class="primary-nav">
         <ul>
-          <li><a href="#our-beginning">Home</a></li>
+          <li><a href="#banner">Home</a></li>
           <li><a href="#features">My Work</a></li>
           <li><a href="#testimonials">Contact</a></li>
         </ul>
@@ -43,14 +43,14 @@
 
     <header class="large-hero__text-content">
       <div id="banner-overlay" class="wrapper">
-        <h2 class="large-hero__title">Zheng Lai</h2>
+        <h1 class="large-hero__title">Zheng Lai</h1>
         <p class="large-hero__description">A web developer with a passion for writing modular code.</p>
       </div>
-      <a id="banner-overlay-button" href="#my-work" class="button">Learn More</a>
+      <a id="banner-overlay-button" href="#my-work" class="large-hero__button">Learn More</a>
     </header>
   </section>
 
-  <div id="my-work" class="page-section">
+  <section id="my-work" class="page-section">
     <div class="wrapper">
 
       <h2 class="headline headline--centred headline--light headline--b-margin-small">The first trip we planned
@@ -99,7 +99,7 @@
       </div>
 
     </div>
-  </div>
+  </section>
 
   <div id="features" class="page-section page-section--blue">
     <div class="wrapper">
