--- a/index.html
+++ b/index.html
@@ -51,49 +51,36 @@
   </section>
 
   <section id="my-work" class="page-section">
+    <h2 class="section-title section-title--grey">My Work</h2>
     <div class="wrapper">
 
-      <h2 class="headline headline--centred headline--light headline--b-margin-small">The first trip we planned
-        <strong>was our own.</strong>
-      </h2>
-      <h3
-        class="headline headline--centred headline--light headline--b-margin-large headline--orange headline--small headline--narrow">
-        Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
-
-      <div class="wrapper wrapper--medium wrapper--b-margin">
-        <img
-          srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w"
-          sizes="(min-width: 976px) 976px, 100vw" alt="Couple walking down a street.">
-      </div>
-
-      <div class="row row--gutters">
-        <div class="row__medium-4 row__medium-4--larger row__b-margin-until-medium">
-          <picture>
-            <source srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" sizes="404px"
-              media="(min-width: 1020px)">
-            <source srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w"
-              sizes="382px" media="(min-width: 800px)">
-            <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w"
-              alt="Our founder, Jane Doe">
-          </picture>
+      <div class="flex-row">
+        <div class="flex-row__item flex-row__item--half generic-content-container">
+          <h3 class="subsection-heading">
+            React Multi-step Form Library
+          </h3>
+          <p>
+            I built a React library for users to easily create interactive multi-step forms using declarative code. The
+            library handles form state management using the Context API, custom hooks and custom input components. All
+            inputs are displayed one at a time, with input validation occurring when the end user clicks the button to
+            proceed to the next input.
+          </p>
+          <a href="#" class="link">
+            <svg class="link__icon">
+              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
+            </svg>
+            Github
+          </a>
+          <a href="#" class="link">
+            <svg class="link__icon">
+              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-sphere"></use>
+            </svg>
+            Website
+          </a>
         </div>
 
-        <div class="row__medium-8 row__medium-8--smaller">
-          <div class="generic-content-container">
-            <h2 class="headline headline--t-margin-none">Here&rsquo;s how we got started&hellip;</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              officia deserunt mollit anim id est laborum.</p>
-            <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-              anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-              laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
-          </div>
+        <div class="flex-row__item flex-row__item--half">
+          <img src="assets/images/our-start-landscape-small-i.jpg" alt="Our founder, Jane Doe">
         </div>
 
       </div>
@@ -104,7 +91,7 @@
   <div id="features" class="page-section page-section--blue">
     <div class="wrapper">
 
-      <h2 class="section-title">
+      <h2 class="section-title section-title--turqoise">
         <img class="section-title__icon" src="assets/images/icons/star.svg">Our <strong>Features</strong>
       </h2>
 
@@ -148,8 +135,8 @@
   <div id="testimonials" class="page-section page-section--testimonials">
     <div class="wrapper wrapper--no-padding-until-medium">
 
-      <h2 class="section-title section-title--blue">
-        <img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong>
+      <h2 class="section-title section-title--turqoise" <img class="section-title__icon"
+        src="assets/images/icons/comment.svg">About <strong>Me</strong>
       </h2>
 
       <div class="row row--flexbox row--gutters-small row--t-padding generic-content-container">
