refactored flex-row__item-half; added frame class; redesigned Lesson Learnt section

--- a/app/index.html
+++ b/app/index.html
@@ -52,39 +52,45 @@
 
   <section id="my-work" class="page-section">
     <div class="wrapper">
-      <h2 class="section-title section-title--grey">My Work</h2>
 
-      <div class="flex-row flex-row--gutters flex-row--narrow subsection">
-        <div class="flex-row__item flex-row__item--half generic-content-container">
-          <h3 class="subsection-title">
+      <div class="generic-content-container generic-content-container--medium generic-content-container--center">
+        <h2 class="section-title section-title--grey">Projects</h2>
+        <p>
+          Projects designed and implemented by me.
+        </p>
+      </div>
+
+      <div class="flex-row flex-row--align-center subsection subsection--narrow">
+        <div class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container--medium">
+          <h3 class="subsection-title subsection-title--grey">
             React Multi-step Form Library
           </h3>
           <p>
-            I built a React library for users to easily create interactive multi-step forms using declarative code. The
-            library handles form state management using the Context API, custom hooks and custom input components. All
-            inputs are displayed one at a time, with input validation occurring when the end user clicks the button to
-            proceed to the next input.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.
           </p>
-          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link">
+          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link link--large">
             <svg class="link__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
             </svg>Github
           </a>
-          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link">
+          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link link--large">
             <svg class="link__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-sphere"></use>
             </svg>Website
           </a>
         </div>
 
-        <div class="flex-row__item flex-row__item--half">
-          <img src="assets/images/our-start-landscape-small-i.jpg" alt="Our founder, Jane Doe" class="flex-row__img">
+        <div class="flex-row__item-half flex-row__item-half--large">
+          <img src="assets/images/react-multi-step-form.jpg" alt="Our founder, Jane Doe" class="frame">
         </div>
 
       </div>
 
       <div class="subsection">
-        <h4 class="subsection-subtitle">
+        <h4 class="subsection-subtitle subsection-subtitle--grey">
           Features
         </h4>
         <ul class="token-list flex-row flex-row--centered">
@@ -104,8 +110,8 @@
             </svg>
           </li>
         </ul>
-        <div class="flex-row flex-row--gutters-small generic-content-container">
-          <div class="flex-row__item flex-row__item--third">
+        <div class="flex-row flex-row--gutters generic-content-container">
+          <div class="flex-row__item flex-row__item-4">
             <div class="feature-item">
 
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
@@ -117,7 +123,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--third">
+          <div class="flex-row__item flex-row__item-4">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -129,7 +135,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--third">
+          <div class="flex-row__item flex-row__item-4">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -141,7 +147,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--third">
+          <div class="flex-row__item flex-row__item-4">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -153,7 +159,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--third">
+          <div class="flex-row__item flex-row__item-4">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -165,7 +171,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--third">
+          <div class="flex-row__item flex-row__item-4">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -179,8 +185,8 @@
         </div>
       </div>
 
-      <div class="background-image subsection generic-content-container">
-        <h4 class="subsection-subtitle">
+      <div class="subsection subsection--extra-narrow generic-content-container generic-content-container--center">
+        <h4 class="subsection-subtitle subsection-subtitle--grey">
           Lesson Learnt
         </h4>
         <p>
@@ -191,34 +197,36 @@
         </p>
       </div>
 
-      <div class="flex-row flex-row--gutters flex-row--narrow subsection">
-        <div class="flex-row__item flex-row__item--half generic-content-container">
-          <h3 class="subsection-title">
+      <div class="flex-row flex-row--align-center subsection subsection--narrow subsection--divider">
+        <div
+          class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container--medium">
+          <h3 class="subsection-title subsection-title--grey">
             Portfolio Website
           </h3>
           <p>
-            I built a React library for users to easily create interactive multi-step forms using declarative code. The
-            library handles form state management using the Context API, custom hooks and custom input components. All
-            inputs are displayed one at a time, with input validation occurring when the end user clicks the button to
-            proceed to the next input.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.
           </p>
-          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link">
+          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link link--large">
             <svg class="link__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
             </svg>Github
           </a>
-          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link">
+          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link link--large">
             <svg class="link__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-sphere"></use>
             </svg>Website
           </a>
         </div>
-
-        <div class="flex-row__item flex-row__item--half">
-          <img src="assets/images/our-start-landscape-small-i.jpg" alt="Our founder, Jane Doe" class="flex-row__img">
+      
+        <div class="flex-row__item-half flex-row__item-half--large">
+          <img src="assets/images/react-multi-step-form.jpg" alt="Our founder, Jane Doe" class="frame">
         </div>
-
+      
       </div>
+
     </div>
   </section>
 
