added Portfolio Website subsection, icon-list class, modifier classes for less spacing, mobile phone framed image and custom shape divider

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
       <nav class="primary-nav">
         <ul>
           <li><a href="#banner">Home</a></li>
-          <li><a href="#features">My Work</a></li>
+          <li><a href="#features">Projects</a></li>
+          <li><a href="#testimonials">About</a></li>
           <li><a href="#testimonials">Contact</a></li>
         </ul>
       </nav>
@@ -61,15 +62,14 @@
       </div>
 
       <div class="flex-row flex-row--align-center subsection subsection--narrow">
-        <div class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container--medium">
+        <div
+          class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container--medium">
           <h3 class="subsection-title subsection-title--grey">
             React Multi-step Form Library
           </h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.
+            A React library for users to easily create interactive multi-step forms using declarative code. Inputs are
+            displayed one at a time, with input validation occurring when the "Next" button is clicked.
           </p>
           <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link link--large">
             <svg class="link__icon">
@@ -84,28 +84,28 @@
         </div>
 
         <div class="flex-row__item-half flex-row__item-half--large">
-          <img src="assets/images/react-multi-step-form.jpg" alt="Our founder, Jane Doe" class="frame">
+          <img src="assets/images/react-multi-step-form.jpg" alt="Our founder, Jane Doe" class="frame frame--padded">
         </div>
 
       </div>
 
       <div class="subsection">
         <h4 class="subsection-subtitle subsection-subtitle--grey">
-          Features
+          Highlights
         </h4>
-        <ul class="token-list flex-row flex-row--centered">
+        <ul class="icon-list flex-row flex-row--centered">
           <li>
-            <svg class="icon">
+            <svg class="icon-list__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-react"></use>
             </svg>
           </li>
           <li>
-            <svg class="icon">
+            <svg class="icon-list__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-html5-original"></use>
             </svg>
           </li>
           <li>
-            <svg class="icon">
+            <svg class="icon-list__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
             </svg>
           </li>
@@ -185,55 +185,143 @@
         </div>
       </div>
 
-      <div class="subsection subsection--extra-narrow generic-content-container generic-content-container--center">
+      <div
+        class="subsection subsection--extra-narrow frame frame--extra-padded generic-content-container generic-content-container--medium generic-content-container--center">
         <h4 class="subsection-subtitle subsection-subtitle--grey">
           Lesson Learnt
         </h4>
         <p>
           I built a React library for users to easily create interactive multi-step forms using declarative code. The
-          library handles form state management using the Context API, custom hooks and custom input components. All
-          inputs are displayed one at a time, with input validation occurring when the end user clicks the button to
-          proceed to the next input.
+          library handles form state management using the Context API, custom hooks and custom input components.
         </p>
       </div>
 
-      <div class="flex-row flex-row--align-center subsection subsection--narrow subsection--divider">
-        <div
-          class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container--medium">
-          <h3 class="subsection-title subsection-title--grey">
-            Portfolio Website
-          </h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.
-          </p>
-          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link link--large">
-            <svg class="link__icon">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
-            </svg>Github
-          </a>
-          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link link--large">
-            <svg class="link__icon">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-sphere"></use>
-            </svg>Website
-          </a>
+      <div class="flex-row subsection subsection--narrow subsection--divider subsection--last">
+
+        <div class="flex-row__item-half flex-row__item-half--extra-large">
+          <div class="generic-content-container generic-content-container--medium">
+            <h3 class="subsection-title subsection-title--grey">
+              Portfolio Website
+            </h3>
+            <p>
+              A single page website for potential employers to glance over my best projects and my background with
+              minimal
+              navigation.
+            </p>
+            <a href="https://github.com/z2lai/portfolio-website" class="link link--large">
+              <svg class="link__icon">
+                <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
+              </svg>Github
+            </a>
+          </div>
+          <div class="generic-content-container">
+            <h4 class="subsection-subtitle subsection-subtitle--inline subsection-subtitle--grey">
+              Highlights
+            </h4>
+            <ul class="icon-list flex-row flex-row--centered">
+              <li>
+                <svg class="icon-list__icon icon-list__icon--small">
+                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-react"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon-list__icon icon-list__icon--small">
+                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-html5-original"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon-list__icon icon-list__icon--small">
+                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon-list__icon icon-list__icon--small">
+                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon-list__icon icon-list__icon--small">
+                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+                </svg>
+              </li>
+            </ul>
+
+            <div class="flex-row generic-content-container">
+              <div class="flex-row__item flex-row__item-full">
+                <div class="feature-item feature-item--iconless">
+                  <h5 class="feature-item__title">Automated Workflow</h5>
+                  <p>
+                    Workflow tools such as gulp to automate building of CSS and JS modules and browser-sync for
+                    simultaneous testing on multiple browsers.
+                  </p>
+                </div>
+              </div>
+              <div class="flex-row__item flex-row__item-full">
+                <div class="feature-item feature-item--iconless">
+                  <h5 class="feature-item__title">Scalable Modular CSS Architecture</h5>
+                  <p>
+                    Scalable modular CSS architecture using PostCSS, BEM and semantic classes.
+                  </p>
+                </div>
+              </div>
+              <div class="flex-row__item flex-row__item-full">
+                <div class="feature-item feature-item--iconless">
+                  <h5 class="feature-item__title">ES6 Modules and Classes</h5>
+                  <p>
+                    Webpack to transpile and bundle? ES6 modules into single a file.
+                  </p>
+                </div>
+              </div>
+              <div class="flex-row__item flex-row__item-full">
+                <div class="feature-item feature-item--iconless">
+                  <h5 class="feature-item__title">Mobile-first Design</h5>
+                  <p>
+                    Prioritized content layout with responsive and optimized images.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      
-        <div class="flex-row__item-half flex-row__item-half--large">
-          <img src="assets/images/react-multi-step-form.jpg" alt="Our founder, Jane Doe" class="frame">
+
+        <div class="flex-row__item-half flex-row__item-half--extra-small">
+          <div class="marvel-device iphone-x">
+            <div class="notch">
+              <div class="camera"></div>
+              <div class="speaker"></div>
+            </div>
+            <div class="top-bar"></div>
+            <div class="sleep"></div>
+            <div class="bottom-bar"></div>
+            <div class="volume"></div>
+            <div class="overflow">
+              <div class="shadow shadow--tr"></div>
+              <div class="shadow shadow--tl"></div>
+              <div class="shadow shadow--br"></div>
+              <div class="shadow shadow--bl"></div>
+            </div>
+            <div class="inner-shadow"></div>
+            <div class="screen">
+              <img src="assets/images/portfolio-website-mobile.JPG" alt="Our founder, Jane Doe">
+            </div>
+          </div>
         </div>
-      
+
       </div>
 
-    </div>
+      <div class="page-section__custom-shape-divider">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M600,112.77C268.63,112.77,0,65.52,0,7.23V120H1200V7.23C1200,65.52,931.37,112.77,600,112.77Z"
+            class="shape-fill"></path>
+        </svg>
+      </div>
   </section>
 
   <div id="testimonials" class="page-section page-section--testimonials">
-    <div class="wrapper wrapper--no-padding-until-medium">
+    <div class="subsection wrapper wrapper--no-padding-until-medium">
 
-      <h2 class="section-title section-title--turqoise" <img class="section-title__icon"
+      <h2 class="section-title section-title--turqoise">
+        <img class="section-title__icon"
         src="assets/images/icons/comment.svg">About <strong>Me</strong>
       </h2>
 
