--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img srcset="assets/images/hero--smaller.jpg 640w" alt="Coastal view of ocean and mountains">
     </picture> -->
 
-    <header class="large-hero__text-content">
+    <header id="repulse-div" class="large-hero__text-content">
       <div id="banner-overlay" class="wrapper">
         <h1 class="large-hero__title">Zheng Lai</h1>
         <p class="large-hero__description">A technical business analyst with a passion for writing modular code.</p>
